--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,12 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
+    <uses-permission-sdk-23 android:name="android.permission.UPDATE_DEVICE_STATS"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -55,6 +61,16 @@
             android:screenOrientation="portrait"
             tools:replace="android:screenOrientation"
             android:stateNotNeeded="true"/>
+
+        <service
+            android:name=".MyServicesForNotificationCaptain"
+            android:enabled="true"
+            android:exported="false"
+            android:finishOnTaskLaunch="true"
+            android:foregroundServiceType="location"
+            android:process=":MyServicesFireCaptain"
+            android:stopWithTask="false" />
+
     </application>
 
 </manifest>
